--- a/themes/meghna-hugo/layouts/partials/banner.html
+++ b/themes/meghna-hugo/layouts/partials/banner.html
@@ -14,7 +14,8 @@
 		</div>
 		{{ end }}
 		<h1>{{ .title | markdownify }}</h1>
-		<p>{{ .content | markdownify }}</p>
+		<img class="ban-img" src="{{ .image | absURL }}" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url({{ .bg_image | absURL }})'"/>
+		<br>
 		{{ if .button.enable }}
 		{{ with .button }}
 		<a href="{{ .link }}" class="btn btn-transparent page-scroll">{{ .label }}</a>
