Upgrade Hugo to the latest version and update all outdated or deprecated packages. Implement premium theme file structures and address any additional issues as needed

--- a/layouts/author/single.html
+++ b/layouts/author/single.html
@@ -14,7 +14,7 @@
 				<div class="content text-center">
 					<figure>
 						{{ if .Params.Image }}
-						<img class="rounded-circle img-fluid lozad" data-src="{{.Params.Image | relURL }}">
+						{{ partial "image.html" (dict "Src" .Params.Image "Alt" "Blog Image" "Class" "rounded-circle img-fluid lozad") }}
 						{{else if .Params.Email}}
 						<img class="rounded-circle img-fluid lozad"
 							data-src="https://www.gravatar.com/avatar/{{ md5 .Params.email }}?s=128&pg&d=identicon">
