--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -3,15 +3,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
       <a class="navbar-brand p-0" href="{{ .Site.BaseURL | relLangURL }}">
         {{ if site.Params.logo }}
-        <img
-          class="lozad"
-          data-src="{{ site.Params.logo | absURL }}"
-          alt="{{ .Site.Title }}"
-          height="42"
-        />
+        {{ partial "image.html" (dict "Src" site.Params.logo "Alt" .Site.Title "Class" "lozad") }}
         {{ else }} {{ site.Title }} {{ end }}
       </a>
-
       <button
         class="navbar-toggler rounded-0"
         type="button"
