--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -22,8 +22,7 @@
         <div class="team-member">
           <div class="member-photo">
             {{"<!-- member photo -->" | safeHTML}}
-            <img class="img-fluid lozad" data-src="{{ .image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .image | absURL }}'" alt="{{ .name }}">
-
+            {{ partial "image.html" (dict "Src" .image_webp "Alt" .name "Class" "img-fluid lozad" ) }}
             {{"<!-- member social profile -->" | safeHTML}}
             <div class="mask">
               <ul class="list-inline">
