--- a/layouts/partials/testimonial.html
+++ b/layouts/partials/testimonial.html
@@ -18,7 +18,7 @@
 
 						{{"<!-- client photo -->" | safeHTML}}
 						<div class="client-thumb">
-							<img class="img-fluid lozad" data-src="{{ .image_webp | absURL }}" onerror="this.onerror=null;this.src='{{ .image | absURL }}'" alt="{{ .name }}">
+							{{ partial "image.html" (dict "Src" .image_webp "Alt" .name "Class" "img-fluid lozad" ) }}
 						</div>
 
 						{{"<!-- client info -->" | safeHTML}}
