--- a/layouts/partials/feature.html
+++ b/layouts/partials/feature.html
@@ -6,9 +6,10 @@
 <section class="section section-bg about-2 padding-0" id="feature">
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-lg-6 padding-0" style="background-image: url('{{ .image_webp | absURL }}'); background-size: cover; background-position: top center; background-repeat: no-repeat; min-height: 400px;">
+			<div class="col-lg-6 padding-0" {{ partial `bg-image.html` (dict `Src` .image_webp ) | safeHTMLAttr }}>
 				<!-- this image is for trigger this section fallback background image -->
-				<img src="{{ .image_webp | absURL }}" style="display: none;" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url({{ .image | absURL }})'">
+  {{ partial "image" (dict "Src" .image "Alt"
+  .Title "Class" "d-none") }}
 			</div>
 			<div class="col-lg-6">
 				<div class="content-block">
