--- a/layouts/partials/banner.html
+++ b/layouts/partials/banner.html
@@ -1,27 +1,25 @@
-{{ $data := index site.Data site.Language.Lang }}
+{{ $data := index site.Data site.Language.Lang }} {{ if
+$data.banner.banner.enable }} {{ with $data.banner.banner }} {{"<!-- Welcome Slider-->"
+| safeHTML}}
+<section
+  class="hero-area" {{ partial `bg-image.html` (dict `Src` .bg_image_webp) | safeHTMLAttr }}
+>
+  {{ partial "image" (dict "Src" .bg_image_webp "Alt"
+  .Title "Class" "d-none") }}
 
-{{ if $data.banner.banner.enable }}
-{{ with $data.banner.banner }}
-{{"<!-- Welcome Slider-->" | safeHTML}}
-<section class="hero-area" style='background-image: url("{{ .bg_image_webp | absURL }}")'>
-	<!-- this image is for trigger this section fallback background image -->
-	<img class="d-none" src="{{ .bg_image_webp | absURL }}" onerror="this.onerror=null;this.parentElement.style.backgroundImage= 'url({{ .bg_image | absURL }})'"/>
-
-	<div class="block">
-		{{ if .icon }}
-		<div class="video-button">
-			<i class="{{ .icon }}"></i>
-		</div>
-		{{ end }}
-		<h1>{{ .title | markdownify }}</h1>
-		<p>{{ .content | markdownify }}</p>
-		{{ if .button.enable }}
-		{{ with .button }}
-		<a href="{{ .link }}" class="btn btn-transparent page-scroll">{{ .label }}</a>
-		{{ end }}
-		{{ end }}
-	</div>
+  <div class="block">
+    {{ if .icon }}
+    <div class="video-button">
+      <i class="{{ .icon }}"></i>
+    </div>
+    {{ end }}
+    <h1>{{ .title | markdownify }}</h1>
+    <p>{{ .content | markdownify }}</p>
+    {{ if .button.enable }} {{ with .button }}
+    <a href="{{ .link }}" class="btn btn-transparent page-scroll"
+      >{{ .label }}</a
+    >
+    {{ end }} {{ end }}
+  </div>
 </section>
-{{"<!-- /Welcome Slider-->" | safeHTML}}
-{{end}}
-{{end}}
+{{"<!-- /Welcome Slider-->" | safeHTML}} {{end}} {{end}}
